Added an endpoint for fetching the latest transient states since the previous released or declined state of the role, associated role functions and the associated child roles. Added functions into the role service for obtaining the latest 'currrent' transients states for a role and it's relations.
